config-root/namespaces/jx-staging/jx3-demoapp1/jx3-demoapp1-ingress.yaml
# Source: jx3-demoapp1/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jx3-demoapp1
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jx3-demoapp1
              servicePort: 80
      host: jx3-demoapp1-jx-staging.apps.os.swe-test.aws.myriad.com
